objects/Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMT+14:00	Line Is. Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>GMT+13:00	Phoenix Is.Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>GMT+13:00	Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>GMT+12:45	Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>GMT+12:00	New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>GMT+12:00	Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>GMT+12:00	Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>GMT+11:30	Norfolk Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>GMT+11:00	Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>GMT+11:00	Solomon Is. Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>GMT+10:30	Australian Central Standard Time ((South Australia) Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>GMT+10:00	Australian Eastern StandardTime (New South Wales) (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>GMT+10:00	Australian Eastern Standard Time (Queensland) (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>GMT+09:30	Australian Central Standard Time (Northern Territory) (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>GMT+09:00	Korea Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>GMT+09:00	Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	Philippines Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	Singapore Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	China Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>GMT+08:00	Australian Western Standard Time (Australia/Perth)</fullName>
                </value>
                <value>
                    <fullName>GMT+07:00	Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>GMT+07:00	Indochina Time (Asia/Ho_Chi_Minh)</fullName>
                </value>
                <value>
                    <fullName>GMT+07:00	West Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>GMT+06:30	Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>GMT+06:00	Bangladesh Time (Asia/Dhaka)</fullName>
                </value>
                <value>
                    <fullName>GMT+05:45	Nepal Time (Asia/Kathmandu)</fullName>
                </value>
                <value>
                    <fullName>GMT+05:30	India Standard Time (Asia/Colombo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_in_Minutes__c</fullName>
        <formula>Time_Total__r.WorkIt2__Time_In_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cycle_Time__c</fullName>
        <formula>DAY( DATEVALUE(Completion_Date__c ) ) - DAY( DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cycle Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touchbase_Call_Completed__c</fullName>
        <label>Touchbase Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trainer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Completed_Date__c</fullName>
        <label>Training Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <label>Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Dates_Confirmed__c</fullName>
        <label>Training Dates Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_End_date__c</fullName>
        <label>Training End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Outlook__c</fullName>
        <label>Training Outlook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Start_date__c</fullName>
        <label>Training Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_team_notified__c</fullName>
        <label>Training team notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transient_Sourcing_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transient Sourcing activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WIP_Days_Count__c</fullName>
        <label>WIP Days Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wedding_Spot_Account_URL__c</fullName>
        <label>Wedding Spot Account URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wedding_Spot_Contact_Email__c</fullName>
        <label>Wedding Spot Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Wedding_Spot_Contact_Name__c</fullName>
        <label>Wedding Spot Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_event_be_connected_to_reg_system__c</fullName>
        <label>Will event be connected to reg system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workbook_Due_Date__c</fullName>
        <label>Workbook Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workbook_Received__c</fullName>
        <label>Workbook Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workbook_Sent__c</fullName>
        <label>Workbook Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workbook_items_completed_in_Passkey__c</fullName>
        <label>Workbook items completed in Passkey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wrap_up_Call__c</fullName>
        <label>Wrap up Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wrap_up_email__c</fullName>
        <label>Wrap up email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X14_days_without_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>14 days without survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X7_Days_without_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>7 Days without Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>for_Paper_B_W_RFID_Printer__c</fullName>
        <formula>Opportunity_Name__r.Number_for_Paper_B_W_RFID_Printers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># for Paper B/W RFID Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>for_Paper_B_W_RFID_Printers__c</fullName>
        <label># for Paper B/W RFID Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Attendees__c</fullName>
        <label># of Attendees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Badges_Used__c</fullName>
        <label># of Badges Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Business_Units__c</fullName>
        <label># of Business Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Contract_Years__c</fullName>
        <label># of Contract Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Cvent_Staff_used__c</fullName>
        <label># of Cvent Staff used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_Open__c</fullName>
        <formula>DATEVALUE(Completion_Date__c) - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Events_Purchased_Year__c</fullName>
        <label># of Events Purchased / Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Exhibitors__c</fullName>
        <label># of Exhibitors</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Handheld_Barcode_Scanners__c</fullName>
        <label># of Handheld Barcode Scanners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Handheld_NFC_Scanner__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Handheld_NFC_Scanners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Handheld NFC Scanners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Handheld_NFC_Scanners__c</fullName>
        <label># of Handheld NFC Scanners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Handheld_RFID_Scanner__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Handheld_RFID_Scanners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Handheld RFID Scanners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Handheld_RFID_Scanners__c</fullName>
        <label># of Handheld RFID Scanners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Ipads_Used__c</fullName>
        <label># of Ipads Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LG_PVC_Printers_RFID_NFC_Capable__c</fullName>
        <formula>Opportunity_Name__r.of_LG_PVC_Printers_RFID_NFC_Capable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of LG PVC Printers(RFID/NFC Capable)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Lanyards_Used__c</fullName>
        <label># of Lanyards Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_Application_Only__c</fullName>
        <label># of LeadCapture Application Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LeadCapture_Hardware_Devices__c</fullName>
        <label># of LeadCapture Hardware Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_NFC_ID_Card_Printer__c</fullName>
        <formula>Opportunity_Name__r.Number_of_NFC_ID_Card_Printers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of NFC ID Card Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_NFC_ID_Card_Printers__c</fullName>
        <label># of NFC ID Card Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paper_B_W_Printer__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Paper_B_W_Printers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Paper B/W Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paper_B_W_Printers__c</fullName>
        <label># of Paper B/W Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paper_Color_Printer__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Paper_Color_Printers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Paper Color Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paper_Color_Printers__c</fullName>
        <label># of Paper Color Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RFID_Door__c</fullName>
        <formula>Opportunity_Name__r.Number_of_RFID_Doors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of RFID Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RFID_Doors__c</fullName>
        <label># of RFID Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RFID_ID_Card_Printer__c</fullName>
        <formula>Opportunity_Name__r.Number_of_RFID_ID_Card_Printers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of RFID ID Card Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_RFID_ID_Card_Printers__c</fullName>
        <label># of RFID ID Card Printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Scanners_used__c</fullName>
        <description>Onsite solution field</description>
        <label># of Scanners used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sessions__c</fullName>
        <label># of Sessions</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_contractors_used__c</fullName>
        <label># of contractors used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_events_remaining__c</fullName>
        <label># of events remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_printers_used__c</fullName>
        <label># of printers used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_routers_used__c</fullName>
        <label># of routers used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_of_Events_Contracted_full_contr__c</fullName>
        <label>total # of Events Contracted (full contr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>ON-{0000}</displayFormat>
        <label>Onboarding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Event</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Jamie_Foon_s_onboardings</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Time_in_Minutes__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Tier__c</columns>
        <columns>Event_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>JFoon</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <label>Jamie Foon's onboardings</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>RelationshipManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Passkey_Hotel_Open_Onboarding_w_closed</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Description__c</columns>
        <columns>SPORG_Needed__c</columns>
        <columns>Status__c</columns>
        <columns>CSC_Assigned__c</columns>
        <columns>PSG_consultant_assigned__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Passkey_Hotel_Existing_Integration,Onboarding__c.Passkey_Hotel_New_PMS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notEqual</operation>
            <value>Cvent Internal Portal Users</value>
        </filters>
        <label>Passkey Hotel Open Onboarding- open only</label>
        <language>en_US</language>
        <sharedTo>
            <group>Opp_Rules_CSN_All_Team</group>
            <group>Passkey_Onboarding</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Passkey_Hotel_Open_Onboarding_w_closed1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Product__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CSC_Assigned__c</columns>
        <columns>PSG_consultant_assigned__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>SPORG_Needed__c</columns>
        <columns>Closed_Days_Count__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Survey_Invitation_Sent__c</columns>
        <columns>Survey_Received_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Passkey_Hotel_Existing_Integration,Onboarding__c.Passkey_Hotel_New_PMS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notEqual</operation>
            <value>Cvent Internal Portal Users</value>
        </filters>
        <label>Passkey Hotel Open Onboarding- w/ closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Passkey_Onboarding</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Passkey_Onboarding_TESTING</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Description__c</columns>
        <columns>SPORG_Needed__c</columns>
        <columns>Status__c</columns>
        <columns>CSC_Assigned__c</columns>
        <columns>PSG_consultant_assigned__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Cvent Internal Portal Users</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Passkey_Hotel_Existing_Integration,Onboarding__c.Passkey_Hotel_New_PMS</value>
        </filters>
        <label>Testing - Passkey Hotel Onboarding</label>
        <language>en_US</language>
        <sharedTo>
            <group>Passkey_Onboarding</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Passkey_Organization_Open_Onboarding</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Description__c</columns>
        <columns>PSG_consultant_assigned__c</columns>
        <columns>Status__c</columns>
        <columns>First_Event_Launch_date__c</columns>
        <columns>CSC_Assigned__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Passkey_Organization</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notEqual</operation>
            <value>Cvent Internal Portal Users</value>
        </filters>
        <label>Passkey Organization Open Onboarding</label>
        <language>en_US</language>
        <sharedTo>
            <group>ALL_CS_users</group>
            <group>Passkey_Onboarding</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Passkey_Organization_Open_Onboarding1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>First_Event_Launch_date__c</columns>
        <columns>CSC_Assigned__c</columns>
        <columns>PSG_consultant_assigned__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Survey_Invitation_Sent__c</columns>
        <columns>Survey_Received_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Passkey_Organization</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notEqual</operation>
            <value>Cvent Internal Portal Users</value>
        </filters>
        <label>Passkey Organization Onboarding w/ close</label>
        <language>en_US</language>
        <sharedTo>
            <group>Passkey_Onboarding</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BT_Demand_Form</fullName>
        <active>true</active>
        <label>BT Demand Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>CC</fullName>
        <active>true</active>
        <description>This is implmented based on P-003135</description>
        <label>Mobile Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSN_Planner</fullName>
        <active>true</active>
        <label>CSN-Planner</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSN_Supplier</fullName>
        <active>true</active>
        <label>CSN-Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>CrowdCompass</fullName>
        <active>false</active>
        <label>CrowdCompass</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMI</fullName>
        <active>true</active>
        <label>EMI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Scoring</fullName>
        <active>true</active>
        <label>Lead Scoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onsite_Solutions</fullName>
        <active>true</active>
        <description>For Event Onsite Solutions</description>
        <label>Onsite Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Passkey_Hotel_Existing_Integration</fullName>
        <active>true</active>
        <label>Passkey Hotel - Existing Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Passkey_Hotel_New_PMS</fullName>
        <active>true</active>
        <label>Passkey Hotel - New PMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Passkey_Organization</fullName>
        <active>true</active>
        <label>Passkey Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Tables_Event_Sales</fullName>
        <active>true</active>
        <label>Social Tables - Event Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Tables_Event_Services_EC_Planners</fullName>
        <active>true</active>
        <label>Social Tables- Event Services - EC (Planners)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Tables_Event_Services_HC_Properties</fullName>
        <active>true</active>
        <label>Social Tables- Event Services - HC (Properties)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Tables_Sales_and_Catering</fullName>
        <active>true</active>
        <label>Social Tables- Sales and Catering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Accounts</fullName>
        <active>true</active>
        <label>Strategic Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey</fullName>
        <active>true</active>
        <label>Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wedding_Spot_Free</fullName>
        <active>true</active>
        <label>Wedding Spot – Free</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wedding_Spot_Paid</fullName>
        <active>true</active>
        <label>Wedding Spot – Paid</label>
    </recordTypes>
    <validationRules>
        <fullName>ARI_integration_Other_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL( ARI_Integration__c, "Other") , ISBLANK(ARI_Integration_Other__c) )</errorConditionFormula>
        <errorDisplayField>ARI_Integration_Other__c</errorDisplayField>
        <errorMessage>ARI Integration other is mandatory if ARI Integration is marked as other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Launch_date_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND( 
OR( 
RecordTypeId = "012000000009AAc",/*Survey*/ 
RecordTypeId = "012000000009AAX"/*Event*/), 
/*ISPICKVAL(Status__c, "Launched")*/ 
NOT(ISNEW()), 
IF(ISBLANK(Actual_Launch_Date__c ),False,OR( 
ISPICKVAL(Launch_Score__c,''), 
ISBLANK(Launch_Score_Comment__c) 
)), 


NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
) 
, 

AND( 
OR( 
RecordTypeId = "012000000009AAc",/*Survey*/ 
RecordTypeId = "012000000009AAX"/*Event*/), 
OR(ISPICKVAL(Status__c, "Launched"),ISPICKVAL(Status__c, "Closed")), 
OR( 
ISBLANK(Actual_Launch_Date__c ), 
ISPICKVAL(Launch_Score__c,''), 
ISBLANK(Launch_Score_Comment__c) 
), 
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
) 
)</errorConditionFormula>
        <errorMessage>Enter the Actual Launch Date, Launch Score and Launch Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Mandatory_Rule</fullName>
        <active>true</active>
        <description>When Ideal launch Date is filled up, Contact name is mandatory</description>
        <errorConditionFormula>AND(

NOT(ISBLANK(End_User_Ideal_Launch_Date__c)),
ISNULL( Contact_Name__c ),
ISPICKVAL( Status__c,"Work In Progress" )

)</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>Please Enter the Contact Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Mandatory_on_Status</fullName>
        <active>true</active>
        <description>If Status = closed, contact is mandatory</description>
        <errorConditionFormula>AND(

ISPICKVAL( Status__c, "Closed"),

ISBLANK(Contact_Name__c),

RecordTypeId &lt;&gt; '0121N000001AQVx',/*Passkey Hotel - Existing Integration*/

RecordTypeId &lt;&gt; '0121N000001AQVy',/*Passkey Hotel - New PMS*/

RecordTypeId &lt;&gt; '0121N000001AQVz',/*Passkey Organization*/

RecordTypeId &lt;&gt; '0121N000001fvV1',/*BT Demand Form*/

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 

)</errorConditionFormula>
        <errorDisplayField>Contact_Name__c</errorDisplayField>
        <errorMessage>Please Enter A Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Actual_Launch_date</fullName>
        <active>true</active>
        <description>If Status equals Closed, this field cant be left blank</description>
        <errorConditionFormula>AND(

ISPICKVAL(Status__c, "Closed"),

ISBLANK(Actual_Launch_Date__c),

RecordTypeId &lt;&gt; "012000000009AAX",/*Event*/

RecordTypeId &lt;&gt; "012o0000000pBpj",/*Onsite Solutions*/

RecordTypeId &lt;&gt; '0121N000001AQVx',/*Passkey Hotel - Existing Integration*/

RecordTypeId &lt;&gt; '0121N000001AQVy',/*Passkey Hotel - New PMS*/

RecordTypeId &lt;&gt; '0121N000001AQVz',/*Passkey Organization*/

RecordTypeId &lt;&gt; '0121N000001fvV1',/*BT Demand Form*/

NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 

)</errorConditionFormula>
        <errorDisplayField>Actual_Launch_Date__c</errorDisplayField>
        <errorMessage>Please Enter A Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Completion_Date</fullName>
        <active>true</active>
        <description>If Status equals Closed, this field cant be left blank</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, "Closed"),
ISBLANK( Completion_Date__c ),
(RecordTypeId = "012000000009AAX") 
)</errorConditionFormula>
        <errorDisplayField>Completion_Date__c</errorDisplayField>
        <errorMessage>Please Enter A Value</errorMessage>
    </validationRules>
</CustomObject>